--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 @tailwind base;
 @tailwind components;
+
+.rdp {
+  @apply mt-2 p-4 ml-0 rounded-lg dark:bg-slate-800 border border-gray-300 dark:border-gray-600 shadow-2xl shadow-gray-600 dark:shadow-gray-900;
+}
+
 @tailwind utilities;
 
 @layer utilities {
