--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,39 @@
 @tailwind components;
 
 .rdp {
-  @apply mt-2 p-4 ml-0 rounded-lg dark:bg-slate-800 border border-gray-300 dark:border-gray-600 shadow-2xl shadow-gray-600 dark:shadow-gray-900;
+  @apply m-0 p-4 ml-0;
+}
+
+.rdp-button {
+  @apply rounded-full p-1;
+}
+
+.rdp-button.rdp-nav_button:hover {
+  @apply bg-gray-200 dark:bg-slate-600;
+}
+
+.rdp-button.rdp-day {
+  @apply rounded-md;
+}
+
+.rdp-button.rdp-day.rdp-day_outside {
+  @apply opacity-25;
+}
+
+.rdp-button.rdp-day:hover {
+  @apply bg-sky-500/20;
+}
+
+.rdp-button:hover:not([disabled]):not(.rdp-day_selected) {
+  @apply bg-sky-500/20;
+}
+
+.rdp-button.rdp-day.rdp-day_selected {
+  @apply bg-sky-500;
+}
+
+.rdp-button:not([disabled]):not(.rdp-day_selected).rdp-day_today {
+  @apply rounded-full bg-red-600 text-white;
 }
 
 @tailwind utilities;
